Optionally show linebreaks in transcriptions. Fixes #178.

--- a/themes/Capitularia/src/css/content-col.scss
+++ b/themes/Capitularia/src/css/content-col.scss
@@ -565,6 +565,12 @@ div.annotation-content {
                     margin-bottom: 0;
                 }
             }
+
+            &.show-linebreaks {
+                span.tei-lb {
+                    display: block;
+                }
+            }
         }
 
         div.mss-footer-xsl,
